--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/jiahao-liang-b643b1256/
+  linkedin         : jiahao-liang-b643b1256/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
