--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "INTRODUCTION"
 title_separator          : "-"
 name                     : &name "JIAHAO LIANG"
 description              : &description "4th-year undergraduate student at the McGill University’s Computer Science"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://dannyjhl.github.io/JIAHAO.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
